WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68646
Web Inspector: XHRs requests with the same url as main resource should have correct category.
https://bugs.webkit.org/show_bug.cgi?id=68646
Summary
Web Inspector: XHRs requests with the same url as main resource should have c...
Vsevolod Vlasov
Reported
2011-09-22 11:29:03 PDT
XHRs requests with the same url as main resource should have correct category. See how to reproduce in
https://bugs.webkit.org/show_bug.cgi?id=20628
.
Attachments
Patch
(5.11 KB, patch)
2011-09-22 11:44 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2011-09-22 11:44:29 PDT
Created
attachment 108372
[details]
Patch
WebKit Review Bot
Comment 2
2011-09-23 08:07:17 PDT
Comment on
attachment 108372
[details]
Patch Clearing flags on attachment: 108372 Committed
r95805
: <
http://trac.webkit.org/changeset/95805
>
WebKit Review Bot
Comment 3
2011-09-23 08:07:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug