Web Inspector: XHRs requests with the same url as main resource should have correct category. https://bugs.webkit.org/show_bug.cgi?id=68646

Reviewed by Yury Semikhatsky.

Source/WebCore:

Test: http/tests/inspector/network/network-xhr-same-url-as-main-resource.html

* inspector/InspectorResourceAgent.cpp:
(WebCore::InspectorResourceAgent::didReceiveResponse):

LayoutTests:

* http/tests/inspector/network/network-xhr-same-url-as-main-resource-expected.txt: Added.
* http/tests/inspector/network/network-xhr-same-url-as-main-resource.html: Added.


Canonical link: https://commits.webkit.org/84646@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95805 268f45cc-cd09-0410-ab3c-d52691b4dbfc